--- a/Device Interface Manager/App.xaml
+++ b/Device Interface Manager/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
              xmlns:view="clr-namespace:Device_Interface_Manager.MVVM.View"
-             StartupUri="MainWindow.xaml">
+             StartupUri="/MVVM/View/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
