Fixed PMDg 737 CDU typo Added FBW A32NX MCDU Screen

--- a/Device Interface Manager/MVVM/View/PMDG737CDU.xaml
+++ b/Device Interface Manager/MVVM/View/PMDG737CDU.xaml
@@ -9,6 +9,8 @@
         Title="PMDG737CDU"
         WindowStyle="None"
         Topmost="True"
+        Height="770"
+        Width="830"
         MouseDown="Window_MouseDown"
         MouseDoubleClick="Window_MouseDoubleClick"
         MouseRightButtonDown="Window_MouseRightButtonDown"
