--- a/Device Interface Manager/MVVM/View/HomeENETView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeENETView.xaml
@@ -17,29 +17,58 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </UserControl.Resources>
 
-    <Grid>
-        <Button Command="{Binding StartENETCommand}"
+    <StackPanel>
+        <Grid HorizontalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Command="{Binding StartENETCommand}"
                 Margin="0,25,0,0"
                 VerticalAlignment="Top"
                 Height="30"
                 Width="150"
                 BorderThickness="0"
                 FontSize="20">
-            <Button.Resources>
-                <Style TargetType="Button">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding IsENETEnabled}" Value="True">
-                            <Setter Property="Content" Value="Start"/>
-                            <Setter Property="Background" Value="DarkGray"/>
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding IsENETEnabled}" Value="False">
-                            <Setter Property="Content" Value="Stop"/>
-                            <Setter Property="Background" Value="Green"/>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </Button.Resources>
-        </Button>
+                <Button.Resources>
+                    <Style TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsENETEnabled}" Value="True">
+                                <Setter Property="Content" Value="Start"/>
+                                <Setter Property="Background" Value="DarkGray"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding IsENETEnabled}" Value="False">
+                                <Setter Property="Content" Value="Stop"/>
+                                <Setter Property="Background" Value="Green"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button 
+                    Grid.Column="1"
+                    Command="{Binding ResetScreensCommand}"
+                    Margin="25,25,0,0"
+                    VerticalAlignment="Top"
+                    Height="30"
+                    Width="180"
+                    FontSize="20"
+                    Background="DarkGray">
+                Reset CDU/MCDU
+                <Button.Resources>
+                    <Style TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsENETEnabled}" Value="True">
+                                <Setter Property="Visibility" Value="Hidden"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding IsENETEnabled}" Value="False">
+                                <Setter  Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </Grid>
         <DockPanel LastChildFill="False"
                    HorizontalAlignment="Center">
             <DataGrid
@@ -52,7 +81,7 @@
                 CanUserSortColumns="False"
                 IsEnabled="{Binding IsENETEnabled}"
                 ItemsSource="{Binding Connections}"
-                Margin="0,80,0,80"
+                Margin="0,25,0,80"
                 Background="Transparent"
                 BorderThickness="5"
                 BorderBrush="#FF152A7F" 
@@ -198,5 +227,5 @@
                 </Button.Resources>
             </Button>
         </DockPanel>
-    </Grid>
+    </StackPanel>
 </UserControl>
