--- a/Device Interface Manager/MVVM/View/HomeENETView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeENETView.xaml
@@ -12,7 +12,7 @@
     d:DesignHeight="560"
     d:Visibility="Visible"
     Visibility="Visible">
-
+    
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </UserControl.Resources>
@@ -47,7 +47,7 @@
             </Button>
             <Button 
                     Grid.Column="1"
-                    Command="{Binding ResetScreensCommand}"
+                    Command="{Binding ResetENETScreensCommand}"
                     Margin="25,25,0,0"
                     VerticalAlignment="Top"
                     Height="30"
