--- a/Device Interface Manager/MVVM/View/HomeUSBView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeUSBView.xaml
@@ -143,7 +143,7 @@
             </Button>
                 <Button 
                     Grid.Column="1"
-                    Command="{Binding ResetScreensCommand}"
+                    Command="{Binding ResetUSBScreensCommand}"
                     Margin="25,25,0,0"
                     VerticalAlignment="Top"
                     Height="30"
